add game layout and styles

--- a/index.html
+++ b/index.html
@@ -8,5 +8,48 @@
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h2>Tic-Tac-Toe</h2>
+    </header>
+    <main class="main-container">
+      <div class="game-info-container">
+        <div class="game-logs"><p>Player-1's turn</p></div>
+        <div class="game-settings">
+          <button type="button">
+            <img src="./images/gear-solid.svg" alt="game settings" />
+          </button>
+        </div>
+      </div>
+      <div class="cell-container">
+        <button type="button" data-1="1" class="cells">1</button
+        ><button type="button" data-2="2" class="cells">2</button
+        ><button type="button" data-3="3" class="cells">3</button
+        ><button type="button" data-4="4" class="cells">4</button
+        ><button type="button" data-5="5" class="cells">5</button
+        ><button type="button" data-6="6" class="cells">6</button
+        ><button type="button" data-7="7" class="cells">7</button
+        ><button type="button" data-8="8" class="cells">8</button
+        ><button type="button" data-9="9" class="cells">9</button>
+      </div>
+      <div class="restart-btn-container">
+        <button type="button" class="restart-btn">Restart</button>
+      </div>
+    </main>
+    <footer>
+      <p class="copyright">
+        Copyright
+        <img
+          src="./images/copyright.png"
+          alt="copyright"
+          class="copyright-icon"
+        />
+        2025
+        <a href="https://github.com/SealedOwl/Library-project"
+          >SealedOwl
+          <img src="./images/github.png" alt="github" class="github-icon"
+        /></a>
+      </p>
+    </footer>
+  </body>
 </html>
