add renderBoard, updateLogMessage and cells event listeners

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         </div>
       </div>
       <div class="cell-container">
-        <button type="button" data-1="1" class="cells">1</button
-        ><button type="button" data-2="2" class="cells">2</button
-        ><button type="button" data-3="3" class="cells">3</button
-        ><button type="button" data-4="4" class="cells">4</button
-        ><button type="button" data-5="5" class="cells">5</button
-        ><button type="button" data-6="6" class="cells">6</button
-        ><button type="button" data-7="7" class="cells">7</button
-        ><button type="button" data-8="8" class="cells">8</button
-        ><button type="button" data-9="9" class="cells">9</button>
+        <button type="button" data-index="0" class="cells"></button>
+        <button type="button" data-index="1" class="cells X-mark">X</button
+        ><button type="button" data-index="2" class="cells O-mark">O</button
+        ><button type="button" data-index="3" class="cells"></button
+        ><button type="button" data-index="4" class="cells"></button
+        ><button type="button" data-index="5" class="cells"></button
+        ><button type="button" data-index="6" class="cells"></button
+        ><button type="button" data-index="7" class="cells"></button
+        ><button type="button" data-index="8" class="cells"></button>
       </div>
       <div class="restart-btn-container">
         <button type="button" class="restart-btn">Restart</button>
