add restart, game settings modal and change names functions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main class="main-container">
       <div class="game-info-container">
-        <div class="game-logs"><p>Player-1's turn</p></div>
+        <div class="game-logs"><p>Player-1's Turn</p></div>
         <div class="game-settings">
           <button type="button" id="settings">
             <img src="./images/gear-solid.svg" alt="game settings" />
@@ -23,8 +23,8 @@
       </div>
       <div class="cell-container">
         <button type="button" data-index="0" class="cells"></button>
-        <button type="button" data-index="1" class="cells X-mark">X</button
-        ><button type="button" data-index="2" class="cells O-mark">O</button
+        <button type="button" data-index="1" class="cells"></button
+        ><button type="button" data-index="2" class="cells"></button
         ><button type="button" data-index="3" class="cells"></button
         ><button type="button" data-index="4" class="cells"></button
         ><button type="button" data-index="5" class="cells"></button
@@ -60,6 +60,7 @@
           <input
             type="text"
             name="player1"
+            id="player1"
             class="name-input"
             placeholder="Player-1"
           />
@@ -69,6 +70,7 @@
           <input
             type="text"
             name="player2"
+            id="player2"
             class="name-input"
             placeholder="Player-2"
           />
